force-app/main/default/objects/Quote/fields/BuildingProjectName__c.field-meta.xml
<CustomField>
    <fullName>BuildingProjectName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Project</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>