force-app/main/default/objects/Quote/fields/EntryDate__c.field-meta.xml
<CustomField>
    <fullName>EntryDate__c</fullName>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>