force-app/main/default/objects/Quote/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <label>Grand Totals</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>