force-app/main/default/objects/Quote/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Part of the Simple Invoice/Quote/Packing Slip app. This allows an invoice to take it&apos;s number from Quote.</description>
    <formula>QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>