force-app/main/default/objects/Quote/fields/Invoice_Paid__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Invoice Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>