force-app/main/default/objects/Quote/fields/Loss__c.field-meta.xml
<CustomField>
    <fullName>Loss__c</fullName>
    <label>Loss reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Delivery date</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Competition in tender</fullName>
            </value>
            <value>
                <fullName>Offer submission too long</fullName>
            </value>
            <value>
                <fullName>No suitable technical solution</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>