force-app/main/default/objects/Quote/fields/Multi_quote__c.field-meta.xml
<CustomField>
    <fullName>Multi_quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mehrfachangebot</description>
    <label>Multi quote</label>
    <type>Checkbox</type>
</CustomField>