force-app/main/default/objects/Quote/fields/NetTotal__c.field-meta.xml
<CustomField>
    <fullName>NetTotal__c</fullName>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>