force-app/main/default/objects/Quote/fields/NetTotalWeight__c.field-meta.xml
<CustomField>
    <fullName>NetTotalWeight__c</fullName>
    <label>Net Total Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>