force-app/main/default/objects/Quote/fields/Number_of_Deliveries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deliveries__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <description>Part of the Simple Invoice/Quote/Packing Slip app. If an order includes more than 1 part (i.e. 3 boxes) this tracks the number of parts associated with a Packing Slip.</description>
    <label>Number of Deliveries</label>
    <length>100</length>
    <type>Text</type>
</CustomField>