force-app/main/default/objects/Quote/fields/ParentOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ParentOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Project Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Building Project Quote</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>