force-app/main/default/objects/Quote/fields/Percent2__c.field-meta.xml
<CustomField>
    <fullName>Percent2__c</fullName>
    <label>Percent 2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>