force-app/main/default/objects/Quote/fields/Percent3__c.field-meta.xml
<CustomField>
    <fullName>Percent3__c</fullName>
    <label>Percent 3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>