force-app/main/default/objects/Quote/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <description>Dieses Feld speichert den Status des Angebotes bevor alle Angebote auf rejected gesetzt werden, wenn eine Opportunity auf Closed Won gesetzt wurde</description>
    <label>Previous Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>