force-app/main/default/objects/Quote/fields/PriceListing__c.field-meta.xml
<CustomField>
    <fullName>PriceListing__c</fullName>
    <label>Price Listing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>