force-app/main/default/objects/Quote/fields/Purchase_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Start_Date__c</fullName>
    <description>Part of the Simple Invoice/Quote/Packing Slip app.</description>
    <label>Purchase Start Date</label>
    <type>Date</type>
</CustomField>