force-app/main/default/objects/Quote/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <label>Quote Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>