force-app/main/default/objects/Quote/fields/Responsible_employee__c.field-meta.xml
<CustomField>
    <fullName>Responsible_employee__c</fullName>
    <label>Responsible employee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>