force-app/main/default/objects/Quote/fields/SalesRepresentive__c.field-meta.xml
<CustomField>
    <fullName>SalesRepresentive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Representive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>