force-app/main/default/objects/Quote/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <label>Supervisor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>