force-app/main/default/objects/Quote/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Part of the Simple Invoice/Quote/Packing Slip app. This allows a tracking number to be associated with a Packing Slip. This is in rich text format to accommodate bar codes, and images.</description>
    <label>Tracking Number</label>
    <length>256</length>
    <type>Html</type>
</CustomField>