force-app/main/default/objects/Quote/fields/Type_of_Quote__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Quote__c</fullName>
    <label>Type of Quote</label>
    <length>100</length>
    <type>Text</type>
</CustomField>