force-app/main/default/objects/Quote/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>BuildingProjectName__c</columns>
    <columns>Loss__c</columns>
    <columns>NetTotal__c</columns>
    <columns>EntryDate__c</columns>
    <columns>SalesRepresentive__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Angebote</label>
</ListView>